@@ -1,5 +1,6 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-08-09 patrick  Updated for Boost.Filesystem changes in Boost 1.34.
 2006-07-13 patrick  Implemented automatic linking of the VPR library.
 2006-07-11 patrick  Link against the dynamic version of the Boost.Filesystem
                     library on Windows.
